# claude-doctor

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dev.cmd  pyproject.toml
deploy/: .gitkeep
docs/: .gitkeep
src/claude_doctor/: __init__.py  __main__.py  cli.py
src/claude_doctor/core/: __init__.py  exceptions.py  locator.py  logger.py  reporter.py  runner.py  types.py
src/claude_doctor/core/checks/: __init__.py  env_check.py  mcp_check.py  settings_check.py
tests/: .gitkeep
