[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-doctor"
version = "0.1.0"
description = "Claude Code 体检医生 — 在 cmd 里一行命令诊断 ~/.claude 配置健康度"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "claude-doctor Contributors" },
]
keywords = ["claude-code", "healthcheck", "diagnostics", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
]
dev = [
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/xxx/claude-doctor"
Issues = "https://github.com/xxx/claude-doctor/issues"

[project.scripts]
claude-doctor = "claude_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_doctor = ["py.typed"]
